# fitdis

./: .gitignore  .pre-commit-config.yaml  README.md  d2sdxdy.py  data.ipynb  production.py  pyproject.toml  sensitivity.ipynb  setup.cfg  uncertainty.py
fitdis/: __init__.py  utils.py
fitdis/dune/: __init__.py  oscillation.py
fitdis/xsection/: __init__.py  nnsfnu.py  yadism.py
