[tool]
[tool.poetry]
name = "fitdis"
version = "0.0.0"
description = "Fit Coefficients of DIS"
readme = "README.md"
authors = [
  "Dacheng Xu, <dx2227@columbia.edu>",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Physics",
]
repository = "https://github.com/dachengx/fitdis"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
yadism = "*"

[build-system]
requires = ["poetry-core>=1.0.8", "setuptools>=61.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
preview = true

[tool.docformatter]
recursive = true
in-place = true
style = "sphinx"
wrap-summaries = 100
wrap-descriptions = 100
blank = true
